@@ -21,6 +21,7 @@ Version 1.0.xxx (June xxth 2013)
 - Fixed: CM119/160/180 Energy daily values (for readers with a very high counter)
 - Implemented: French language support (thanks to the community!)
 - Fixed: Notification translations
+- Implemented: Lighting2, when a Group Off is received, all switched with the same ID will be set to 'Off' (internally)
 
 Version 1.0.666 (May 28th 2013)
 - Implemented: Settings, Doorbell could be send as 'Group On' or 'On' command
